@@ -25,11 +25,15 @@ then
   mvn -B clean package
 fi
 
-echo "Removing files and folders under samples/client/petstore/go/go-petstore"
-rm -rf samples/client/petstore/go/go-petstore
+SPEC="modules/openapi-generator/src/test/resources/2_0/petstore-with-fake-endpoints-models-for-testing.yaml"
+GENERATOR="go"
+STUB_DIR="samples/client/petstore/go/go-petstore"
+
+echo "Removing files and folders under $STUB_DIR"
+rm -rf $STUB_DIR
 
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
-ags="generate -t modules/openapi-generator/src/main/resources/go -i modules/openapi-generator/src/test/resources/2_0/petstore-with-fake-endpoints-models-for-testing.yaml -g go -o samples/client/petstore/go/go-petstore -DpackageName=petstore $@"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
+ags="generate -t modules/openapi-generator/src/main/resources/go -i $SPEC -g $GENERATOR -o $STUB_DIR --additional-properties packageName=petstore $@"
 
 java $JAVA_OPTS -jar $executable $ags
